Amarok ChangeLog
================
(C) 2002-2011 the Amarok authors.

Version 2.4.4-Beta 1
  FEATURES:
    * Made possible to make presets for TagGuesser. (BR 264632)
    * Display current timestamp in tray tooltip. (BR 278445)

  CHANGES:
    * Current track applet: show number of artists instead of genres. (BR 261077)

  BUGFIXES:
    * Fixed issue that made TagGuesser dialog to forget setings. (BR 280288)
    * Fixed tags guessing from full file path. (BR 264302)
    * Work around a Qt bug that crashed Amarok in various situations. (BR 207382, BR 269227)
    * Fixed issue with TagDialog that brought to messed up digits order in numerical
      fields (year, track, disk, score). (BR 277279)
    * Made possible to store empty TagDialog's numerical fields. (BR 278921)
    * Fixed issue with TagDialog's "Open Destination" button, now It opens
      correct directory instead of parent. (BR 279147)

Version 2.4.3
  BUGFIXES:
    * Fix KWallet auth requests on every track change. (BR 278177)
    * Display correct values for pretty times (playlist length) > 1 day.
    * Update playlist length correctly after removing track. (BR 273407)
    * Fix seek backward from dbus. (Thanks to Matthieu Bedouet) (BR 263287)
    * Prevent dialog querying last.fm settings being displayed on startup if none set.
    * Fix detection of smartphones in USB storage mode. (BR 277685)
    * Fix crashes on expanding a newly cloned dynamic playlist (BR 277750)
    * Don't block the UI while calculating the filename previews. (BR 233196)
    * Make M3U & PLS playlist files editable from Saved Playlists. (BR 245963)

Version 2.4.2
    * This version number was skipped.

VERSION 2.4.2-Beta 1
  FEATURES:
    * Made Amarok compile with the Clang LLVM frontend.
    * Enable drag and drop on collections to copy/move within Local Music and
      directly from the playlist. (BR 223400)
    * Added KNotify scripting interface. (BR 260750)